--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.12.37",
+    "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-query": "^5.56.2",
     "@types/d3": "^7.4.3",
     "@types/three": "^0.182.0",
